[gd_scene load_steps=5 format=3 uid="uid://dwunvo0y878l1"]

[ext_resource type="Script" path="res://Classes/Effects/ChipsAreDown/Chip.gd" id="1_odypl"]
[ext_resource type="PackedScene" uid="uid://cwrg2u4vd8gyp" path="res://Classes/Effects/ChipsAreDown/Ficha.glb" id="2_k7onw"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_65kc1"]
bounce = 0.05

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bi4pf"]
height = 0.0941596
radius = 0.456848

[node name="Chip" type="RigidBody3D"]
collision_layer = 2
collision_mask = 7
mass = 1000.0
physics_material_override = SubResource("PhysicsMaterial_65kc1")
continuous_cd = true
contact_monitor = true
max_contacts_reported = 5
script = ExtResource("1_odypl")

[node name="Ficha" parent="." instance=ExtResource("2_k7onw")]

[node name="DeadTime" type="Timer" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_bi4pf")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeadTime" to="." method="_on_dead_time_timeout"]
